--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image filtered span-1-75" data-position="25% 25%">
+								<div class="image filtered span-2" data-position="25% 25%">
 									<img src="images/brush.jpg" alt="brush" width="595" height="900" />
 								</div>
 							</section>
@@ -70,18 +70,18 @@
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight large left">
+							<section class="panel spotlight large right">
 								<div class="content span-5">
 									<h2 class="major">Magna amet tempus</h2>
 									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
 								</div>
-								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
+								<div class="image filtered tinted" data-position="center">
+									<img src="images/living2.jpg" alt="" />
 								</div>
 							</section>
 
                         <!-- Table -->
-                            <section class="panel spotlight medium center color2-alt">
+                            <section class="panel spotlight medium center color1-alt">
                                 <div class="span-7">
 										<h3 class="major">O parte din serviciile noastre</h3>
 										
