--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image filtered span-2" data-position="25% 25%">
+								<div class="image filtered span-2-25" data-position="25% 25%">
 									<img src="images/brush.jpg" alt="brush" width="595" height="900" />
 								</div>
 							</section>
