--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
-										<form method="post" action="#">
+										<form method="post" action="mailto:mihai.vlad.liviu@gmail.com">
 											<div class="fields">
 												<div class="field half">
 													<label for="name">Nume</label>
@@ -165,8 +165,8 @@
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon brands fa-facebook-f"><a href="#">facebook.com/trafalescu</a></li>
-								            <li class="icon brands fa-instagram"><a href="#">@trafalescu</a></li>   
+											<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/trafalescu/">facebook.com/trafalescu</a></li>
+								            <li class="icon brands fa-instagram"><a href="https://www.instagram.com/trafalescu/">@trafalescu</a></li>   
 								        </ul>
 									</div>
 								</div>
