--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Cum te putem ajuta</h2>
-									<p>Trafalescu este un concept, apărut în urma dorinței permanente de schimbare a omului. Fie că vrei ceva nou, fie că vrei doar să-ți igienizezi și să-ți împrospătezi casa, noi avem soluția la orice problemă. Reparatul pereților, lucrările lavabile și vopsitul în casa ta, nu au fost niciodată mai ușoare. Dacă ești în căutare de profesioniști în domeniul amenajărilor interioare, atunci Trafelescu este alegerea ideală pentru tine.</p>
+									<h2 class="major">Pachetul de o zi</h2>
+									<p>text</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/zugrav.jpg" alt="" />
@@ -49,7 +49,7 @@
 							<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Proiectele noastre</h2>
+									<h2 class="major">Jurnal foto</h2>
 									<p>Suntem o echipa pasionata, inovativa, creativa si experimentata, care considera esential ca tu, clientul, sa fii satisfacut, cand ne luam la revedere.</p>
 								</div>
 								<div class="gallery">
@@ -69,21 +69,17 @@
 								</div>
 							</section>
 
-						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight large right">
-								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
-								</div>
-								<div class="image filtered tinted" data-position="center">
-									<img src="images/living2.jpg" alt="" />
+							<section class="panel">
+								<div class="intro color1">
+									<h2 class="major">Siguranta</h2>
+									<p>Stim cum e sa ai straini in casa. Nu trebuie sa-ti faci griji in privinta noastra. Insa, pentru linistea ta, toata operatiunea va fi filmata in timp real si o vei putea accesa, printr-un link, de oriunde.</p>
 								</div>
 							</section>
 
                         <!-- Table -->
-                            <section class="panel spotlight medium center color1-alt">
+                            <section class="panel spotlight medium center color2-alt">
                                 <div class="span-7">
-										<h3 class="major">O parte din serviciile noastre</h3>
+										<h3 class="major">Tarife*</h3>
 										
 										<div class="table-wrapper">
 											<table>
@@ -96,44 +92,41 @@
 												</thead>
 												<tbody>
 													<tr>
-														<td>Item One</td>
-														<td>Ante turpis integer aliquet porttitor.</td>
-														<td>29.99</td>
+														<td>Garsoniera</td>
+														<td>Reparatii, lavabil, materiale incluse in pret.</td>
+														<td>de la 1800RON</td>
 													</tr>
 													<tr>
-														<td>Item Two</td>
-														<td>Vis ac commodo adipiscing arcu aliquet.</td>
-														<td>19.99</td>
+														<td>Ap. 2 camere</td>
+														<td>Reparatii, lavabil, materiale incluse in pret.</td>
+														<td>de la 2800RON</td>
 													</tr>
 													<tr>
-														<td>Item Three</td>
-														<td> Morbi faucibus arcu accumsan lorem.</td>
-														<td>29.99</td>
+														<td>Ap. 3 camere</td>
+														<td>Reparatii, lavabil, materiale incluse in pret.</td>
+														<td>de la 3800RON</td>
 													</tr>
 													<tr>
-														<td>Item Four</td>
-														<td>Vitae integer tempus condimentum.</td>
-														<td>19.99</td>
-													</tr>
-													<tr>
-														<td>Item Four</td>
-														<td>Vitae integer tempus condimentum.</td>
-														<td>19.99</td>
-													</tr>
-													<tr>
-														<td>Item Four</td>
-														<td>Vitae integer tempus condimentum.</td>
-														<td>19.99</td>
-													</tr>
-													<tr>
-														<td>Item Four</td>
-														<td>Vitae integer tempus condimentum.</td>
-														<td>19.99</td>
+														<td>Ap. 4 camere</td>
+														<td>Reparatii, lavabil, materiale incluse in pret.</td>
+														<td>de la 4800RON</td>
 													</tr>
 												</tbody>
 											</table>
+										  <p>*Preturile pot creste, in functie de nevoile tale</p>
 										</div>
 								</section>
+
+								<!-- Panel (Spotlight) -->
+							<section class="panel spotlight large right">
+								<div class="content span-5">
+									<h2 class="major">Despre noi</h2>
+									<p>Trafalescu este un concept, apărut în urma dorinței permanente de schimbare a omului. Fie că vrei ceva nou, fie că vrei doar să-ți igienizezi și să-ți împrospătezi casa, noi avem soluția la orice problemă. Reparatul pereților, lucrările lavabile și vopsitul în casa ta, nu au fost niciodată mai ușoare. Dacă ești în căutare de profesioniști în domeniul amenajărilor interioare, atunci Trafelescu este alegerea ideală pentru tine.</p>
+								</div>
+								<div class="image filtered tinted" data-position="center">
+									<img src="images/living2.jpg" alt="" />
+								</div>
+							</section>
 
 						<!-- Panel -->
 							<section class="panel color4-alt">
