--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Bine ați
-									venit!</h1>
+									<h3 class="major">O zi la spa pentru peretii tai</h3>
 									<p>Noi suntem <strong>Trafalescu</strong>, o echipă profesionistă de zugravi, care pune la dispoziția ta uneltele necesare oricărei schimbări, pe care tu ți-o dorești pentru casa ta, astfel încât să-ți poți dedica timpul lucrurilor cu adevărat importante.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
