--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
                         <!-- Table -->
                             <section class="panel spotlight medium center color2-alt">
-                                <div class="span-7">
+                                <div class="content">
 										<h3 class="major">Tarife*</h3>
-										
+
 										<div class="table-wrapper">
 											<table>
 												<thead>
@@ -158,7 +158,7 @@
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
 											<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/trafalescu/">facebook.com/trafalescu</a></li>
-								            <li class="icon brands fa-instagram"><a href="https://www.instagram.com/trafalescu/">@trafalescu</a></li>   
+								            <li class="icon brands fa-instagram"><a href="https://www.instagram.com/trafalescu/">@trafalescu</a></li>
 								        </ul>
 									</div>
 								</div>
