--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
+		<meta name="theme-color" content="#b19cd9">
 		<title>Trafalescu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -50,7 +51,7 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Jurnal foto</h2>
-									<p>Suntem o echipa pasionata, inovativa, creativa si experimentata, care considera esential ca tu, clientul, sa fii satisfacut, cand ne luam la revedere.</p>
+									<p>Suntem o echipa pasionata, inovativa, creativa si experimentata, care considera esential ca tu, sa fii satisfacut, cand ne luam la revedere.</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
