--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
-		<meta name="theme-color" content="#b19cd9">
+		<meta name="theme-color" content="#7c5295">
 		<title>Trafalescu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
