--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<section class="panel spotlight large right">
 								<div class="content span-5">
 									<h2 class="major">Despre noi</h2>
-									<p>Trafalescu este un concept, apărut în urma dorinței permanente de schimbare a omului. Fie că vrei ceva nou, fie că vrei doar să-ți igienizezi și să-ți împrospătezi casa, noi avem soluția la orice problemă. Reparatul pereților, lucrările lavabile și vopsitul în casa ta, nu au fost niciodată mai ușoare. Dacă ești în căutare de profesioniști în domeniul amenajărilor interioare, atunci Trafelescu este alegerea ideală pentru tine.</p>
+									<p>Trafalescu este un concept, apărut în urma dorinței permanente de schimbare a omului. Fie că vrei ceva nou, fie că vrei doar o igienizare și o împrospătare, noi venim în ajutorul tău.</p>
 								</div>
 								<div class="image filtered tinted" data-position="center">
 									<img src="images/living2.jpg" alt="" />
