--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h2 class="major">O zi la spa pentru peretii tai</h2>
-									<p>Noi suntem <strong>Trafalescu</strong>, o echipă profesionistă de zugravi, care pune la dispoziția ta uneltele necesare oricărei schimbări, pe care tu ți-o dorești pentru casa ta, astfel încât să-ți poți dedica timpul lucrurilor cu adevărat importante.</p>
+									<p>Noi suntem <strong>Trafalescu</strong>, o echipă experimentată, complet dotată, care pune la dispoziția ta soluțiile necesare unei schimbări, astfel încât tu să-ți dedici timpul lucrurilor cu adevărat importante.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -122,7 +122,7 @@
 							<section class="panel spotlight large right">
 								<div class="content span-5">
 									<h2 class="major">Despre noi</h2>
-									<p>Trafalescu este un concept, apărut în urma dorinței permanente de schimbare a omului. Fie că vrei ceva nou, fie că vrei doar o igienizare și o împrospătare, noi venim în ajutorul tău.</p>
+									<p>Trafalescu este un concept apărut în urma dorinței permanente de schimbare a omului. Fie că vrei ceva nou, fie că vrei doar o igienizare și o împrospătare, noi venim în ajutorul tău. Reparatul pereților, lucrările lavabile și vopsitul în casa ta nu au fost niciodată mai ușoare.</p>
 								</div>
 								<div class="image filtered tinted" data-position="center">
 									<img src="images/living2.jpg" alt="" />
