--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h2 class="major">O zi la spa pentru peretii tai</h2>
+									<h2 class="major">O zi la spa pentru pereții tai</h2>
 									<p>Noi suntem <strong>Trafalescu</strong>, o echipă experimentată, complet dotată, care pune la dispoziția ta soluțiile necesare unei schimbări, astfel încât tu să-ți dedici timpul lucrurilor cu adevărat importante.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
@@ -39,8 +39,20 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Pachetul de o zi</h2>
-									<p>text</p>
+									<h2 class="major">Cum procedam</h2>
+								  <p><strong>Lucram eficient si rapid, seara ai scapat de noi.</strong></p>
+									<ul>
+										<li>Mutam mobila in centrul camerei.</li>
+										<li>Infoliem mobila, podeaua si tamplaria.</li>
+										<li>Reparam stricaciunile superficiale.</li>
+										<li>Slefuim peretii.</li>
+										<li>Aplicam doua straturi de lavabil alb*</li>
+										<li>Dezfoliem si punem mobila acolo unde am gasit-o.</li>
+									</ul>
+									<p>*Pentru lucrarile lavabile color ne vedem si a doua zi.</p>
+									<ul class="actions">
+										<li><a href="tel:0727 386 166" class="button">Programează-te</a></li>
+									</ul>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/zugrav.jpg" alt="" />
