--- a/index.html
+++ b/index.html
@@ -39,19 +39,18 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Cum procedam</h2>
-								  <p><strong>Lucram eficient si rapid, seara ai scapat de noi.</strong></p>
+									<h2 class="major">Cum procedăm</h2>
+								  <p><strong>Lucrăm eficient și rapid, seara ai scăpat de noi.</strong></p>
 									<ul>
-										<li>Mutam mobila in centrul camerei.</li>
-										<li>Infoliem mobila, podeaua si tamplaria.</li>
-										<li>Reparam stricaciunile superficiale.</li>
-										<li>Slefuim peretii.</li>
-										<li>Aplicam doua straturi de lavabil alb*</li>
-										<li>Dezfoliem si punem mobila acolo unde am gasit-o.</li>
+										<li>Mutăm mobila în centrul camerei.</li>
+										<li>Înfoliem mobila, podeaua și tâmplăria.</li>
+										<li>Reparăm imperfecțiunile pereților.</li>
+										<li>Aplicăm două straturi de lavabil alb*</li>
+										<li>Dezfoliem și punem totul la loc.</li>
 									</ul>
-									<p>*Pentru lucrarile lavabile color ne vedem si a doua zi.</p>
+									<p>*Pentru lucrările lavabile color ne vedem și a doua zi.</p>
 									<ul class="actions">
-										<li><a href="tel:0727 386 166" class="button">Programează-te</a></li>
+										<li><a href="tel:0727 386 166" class="button">Sună-ne!</a></li>
 									</ul>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
@@ -63,7 +62,7 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Jurnal foto</h2>
-									<p>Suntem o echipa pasionata, inovativa, creativa si experimentata, care considera esential ca tu, sa fii satisfacut, cand ne luam la revedere.</p>
+									<p>Suntem o echipă pasionată, inovativă și experimentată, care consideră esențial ca tu să fii satisfăcut, când ne luăm la revedere.</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
@@ -84,8 +83,8 @@
 
 							<section class="panel">
 								<div class="intro color1">
-									<h2 class="major">Siguranta</h2>
-									<p>Stim cum e sa ai straini in casa. Nu trebuie sa-ti faci griji in privinta noastra. Insa, pentru linistea ta, toata operatiunea va fi filmata in timp real si o vei putea accesa, printr-un link, de oriunde.</p>
+									<h2 class="major">Siguranța</h2>
+									<p>Știm cum e să ai străini în casă. Nu trebuie să-ți faci griji în privința noastră. Însă, pentru liniștea ta, toată operațiunea va fi filmată în timp real și o vei putea accesa, printr-un link, de oriunde.</p>
 								</div>
 							</section>
 
@@ -100,33 +99,33 @@
 													<tr>
 														<th>Serviciu</th>
 														<th>Descriere</th>
-														<th>Pret</th>
+														<th>Preț</th>
 													</tr>
 												</thead>
 												<tbody>
 													<tr>
-														<td>Garsoniera</td>
-														<td>Reparatii, lavabil, materiale incluse in pret.</td>
+														<td>Garsonieră</td>
+														<td>Reparații, lavabil, materiale incluse in preț.</td>
 														<td>de la 1800RON</td>
 													</tr>
 													<tr>
 														<td>Ap. 2 camere</td>
-														<td>Reparatii, lavabil, materiale incluse in pret.</td>
+														<td>Reparații, lavabil, materiale incluse in preț.</td>
 														<td>de la 2800RON</td>
 													</tr>
 													<tr>
 														<td>Ap. 3 camere</td>
-														<td>Reparatii, lavabil, materiale incluse in pret.</td>
+														<td>Reparații, lavabil, materiale incluse in preț.</td>
 														<td>de la 3800RON</td>
 													</tr>
 													<tr>
 														<td>Ap. 4 camere</td>
-														<td>Reparatii, lavabil, materiale incluse in pret.</td>
+														<td>Reparații, lavabil, materiale incluse in preț.</td>
 														<td>de la 4800RON</td>
 													</tr>
 												</tbody>
 											</table>
-										  <p>*Preturile variaza in functie de complexitatea lucrarii.</p>
+										  <p>*Prețurile variază in funcție de complexitatea lucrarii.</p>
 										</div>
 								</section>
 
@@ -145,7 +144,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p><strong>Trafalescu</strong><br> Bucuresti, Romania<br> Luni - Vineri 09:00 - 20:00<br> <a href="tel:0727 386 166">Tel: 0727 386 166</a></p>
+									<p><strong>Trafalescu</strong><br> București, Romania<br> Luni - Vineri 09:00 - 20:00<br> <a href="tel:0727 386 166">Tel: 0727 386 166</a></p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
