--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 							<section class="panel">
 								<div class="intro color1">
-									<h2 class="major">Siguranța</h2>
+									<h2 class="major">Siguranță</h2>
 									<p>Știm cum e să ai străini în casă. Nu trebuie să-ți faci griji în privința noastră. Însă, pentru liniștea ta, toată operațiunea va fi filmată în timp real și o vei putea accesa, printr-un link, de oriunde.</p>
 								</div>
 							</section>
