--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h2 class="major">O zi la spa pentru pereții tăi</h2>
-									<p>Noi suntem <strong>Trafalescu</strong>, o echipă experimentată, complet dotată, care pune la dispoziția ta soluțiile necesare unei schimbări, astfel încât tu să-ți dedici timpul lucrurilor cu adevărat importante.</p>
+									<p>Noi suntem <strong>Trafalescu</strong>, o echipă experimentată de zugravi in București, complet dotată, care pune la dispoziția ta soluțiile necesare unei schimbări, astfel încât tu să-ți dedici timpul lucrurilor cu adevărat importante.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
