--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/customPersonalCss.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
 		<!-- Page Wrapper -->
+		<div id="content">
+			<!-- Logo Navigation-->
+			<div class="row">
+				<div class="divNavContent"><img src="images/logo.png" class="logoNav"/></div>
+			</div>
 			<div id="page-wrapper">
-
 				<!-- Wrapper -->
 					<div id="wrapper">
-
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
@@ -170,20 +173,20 @@
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/trafalescu/">facebook.com/trafalescu</a></li>
-								            <li class="icon brands fa-instagram"><a href="https://www.instagram.com/trafalescu/">@trafalescu</a></li>
+											<li class="icon brands fa-facebook-f"><a target="_blank" href="https://www.facebook.com/trafalescu/">facebook.com/trafalescu</a></li>
+								            <li class="icon brands fa-instagram"><a target="_blank" href="https://www.instagram.com/trafalescu/">@trafalescu</a></li>
 								        </ul>
 									</div>
 								</div>
 							</section>
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</div>
 
 					</div>
 
 			</div>
-
+</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
