--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <html>
 	<head>
 		<meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
+		<title>Trafalescu - O zi la spa pentru pereții tai</title>
+		<meta name="description" content="">
 		<meta name="theme-color" content="#7c5295">
 		<title>Trafalescu</title>
 		<meta charset="utf-8" />
