--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon brands fa-facebook-f"><a target="_blank" href="https://www.facebook.com/trafalescu/">facebook.com/trafalescu</a></li>
+											<li class="icon brands fa-facebook-f"><a target="_blank" href="https://www.facebook.com/Trafalescu-115558663534611">facebook.com/trafalescu</a></li>
 								            <li class="icon brands fa-instagram"><a target="_blank" href="https://www.instagram.com/trafalescu/">@trafalescu</a></li>
 								        </ul>
 									</div>
