--- a/index.html
+++ b/index.html
@@ -16,6 +16,48 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/customPersonalCss.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
+		<!-- Schema -->
+		<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "HousePainter",
+  "name": "Trafalescu",
+  "image": "https://drive.google.com/file/d/1BFzXQVqxZ4klT3-kJUt7Lix-0FrAfcp1/view",
+  "@id": "https://www.trafalescu.ro",
+  "url": "https://www.trafalescu.ro",
+  "telephone": "0727386166",
+  "priceRange": "1800 - 4800",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "",
+    "addressLocality": "Bucuresti",
+    "postalCode": "",
+    "addressCountry": "RO"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 44.439663,
+    "longitude": 26.096306
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Friday",
+      "Thursday",
+      "Wednesday",
+      "Tuesday",
+      "Monday"
+    ],
+    "opens": "09:00",
+    "closes": "20:00"
+  },
+  "sameAs": [
+    "https://www.facebook.com/Trafalescu-115558663534611",
+    "https://www.instagram.com/trafalescu/"
+  ]
+}
+</script>
 	</head>
 	<body class="is-preload">
 		<!-- Page Wrapper -->
