--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/customPersonalCss.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		
+
 		<!-- Schema -->
 		<script type="application/ld+json">
 {
@@ -144,7 +144,7 @@
 											<table>
 												<thead>
 													<tr>
-														<th>Serviciu</th>
+														<th>Suprafață</th>
 														<th>Descriere</th>
 														<th>Preț</th>
 													</tr>
@@ -172,7 +172,7 @@
 													</tr>
 												</tbody>
 											</table>
-										  <p>*Prețurile variază in funcție de complexitatea lucrarii.</p>
+										  <p style="text-align:left">*Prețurile variază in funcție de complexitatea lucrării.<br>*Pensionarii beneficiază de 15% reducere.</p>
 										</div>
 								</section>
 
@@ -180,10 +180,12 @@
 							<section class="panel spotlight large right">
 								<div class="content span-5">
 									<h2 class="major">Despre noi</h2>
-									<p>Trafalescu este un concept apărut în urma dorinței permanente de schimbare a omului. Fie că vrei ceva nou, fie că vrei doar o igienizare și o împrospătare, noi venim în ajutorul tău. Reparatul pereților, lucrările lavabile și vopsitul în casa ta nu au fost niciodată mai ușoare.</p>
+									<p>Trafalescu este un concept apărut în urma dorinței permanente de schimbare a omului. Fie că vrei ceva nou,
+										fie că vrei doar o igienizare și o împrospătare, noi venim în ajutorul tău. Reparatul pereților, lucrările lavabile
+										și vopsitul în casa ta nu au fost niciodată mai ușoare.</p>
 								</div>
 								<div class="image filtered tinted" data-position="center">
-									<img src="images/living2.jpg" alt="" />
+									<img src="images/dormitor-camera.jpg" alt="" />
 								</div>
 							</section>
 
