--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p><strong>Trafalescu</strong><br> București, Romania<br> Luni - Vineri 09:00 - 20:00<br> <a href="tel:0727 386 166">Tel: 0727 386 166</a></p>
+									<p><strong>Trafalescu</strong><br> București, Romania<br> Luni - Vineri: 09:00 - 20:00<br>mail: contact@trafalescu.ro<br><a href="tel:0727 386 166">Tel: 0727 386 166</a></p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
-										<form method="post" action="mailto:mihai.vlad.liviu@gmail.com">
+										<form method="post" action="mailto:contact@trafalescu.ro">
 											<div class="fields">
 												<div class="field half">
 													<label for="name">Nume</label>
