--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 -->
 <html>
 	<head>
-		<meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 		<title>Trafalescu - O zi la spa pentru pereții tai</title>
-		<meta name="description" content="">
+		<meta name="description" content="Echipă profesionistă de zugravi în București. Realizăm lucrări lavabile eficient și rapid. Îți împrospătăm apartamentul cu lavabil alb într-o singură zi.">
 		<meta name="theme-color" content="#7c5295">
 		<title>Trafalescu</title>
 		<meta charset="utf-8" />
@@ -108,23 +107,23 @@
 									<h2 class="major">Jurnal foto</h2>
 									<p>Suntem o echipă pasionată, inovativă și experimentată, care consideră esențial ca tu să fii satisfăcut, când ne luăm la revedere.</p>
 									<ul class="actions">
-										<li><a href="tel:0727 386 166" class="button">Sună-ne!</a></li>
+										<li><a href="tel:0790 559 895" class="button">Sună-ne!</a></li>
 									</ul>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/sufragerie-canapea-zen.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/sufragerie-canapea-zen.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/sufragerie-plante-caramida.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/sufragerie-plante-caramida.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/dormitor-mov-lavabil.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/dormitor-mov-lavabil.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/fotoliu-galben.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/fotoliu-galben.jpg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/masa-bucatarie-lavabil.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/masa-bucatarie-lavabil.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/living-lavabil-alb.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/living-lavabil-alb.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/dormitor-lavabil-alb.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/dormitor-lavabil-alb.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/baie-lavabil-alb.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/baie-lavabil-alb.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/canapea-caramida-lavabil-alb.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/canapea-caramida-lavabil-alb.jpg" alt="" /></a>
 								</div>
 							</section>
 
@@ -193,7 +192,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p><strong>Trafalescu</strong><br> București, Romania<br> Luni - Vineri: 09:00 - 20:00<br>mail: contact@trafalescu.ro<br><a href="tel:0727 386 166">Tel: 0727 386 166</a></p>
+									<p><strong>Trafalescu</strong><br> București, Romania<br> Luni - Vineri: 09:00 - 20:00<br>mail: contact@trafalescu.ro<br><a href="tel:0790 559 895">Tel: 0727 386 166</a></p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
