--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>Trafalescu - O zi la spa pentru pereții tai</title>
 		<meta name="description" content="Echipă profesionistă de zugravi în București. Realizăm lucrări lavabile eficient și rapid. Îți împrospătăm apartamentul cu lavabil alb într-o singură zi.">
+		<meta name="keywords" content="zugrav bucuresti, zugravi bucuresti preturi, zugrav bun bucuresti">
 		<meta name="theme-color" content="#7c5295">
 		<title>Trafalescu</title>
 		<meta charset="utf-8" />
