--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Trafalescu - O zi la spa pentru pereții tai</title>
+		<title>Trafalescu - Zugrav în București</title>
 		<meta name="description" content="Echipă profesionistă de zugravi în București. Realizăm lucrări lavabile eficient și rapid. Îți împrospătăm apartamentul cu lavabil alb într-o singură zi.">
-		<meta name="keywords" content="zugrav bucuresti, zugravi bucuresti preturi, zugrav bun bucuresti">
 		<meta name="theme-color" content="#7c5295">
 		<title>Trafalescu</title>
 		<meta charset="utf-8" />
@@ -73,7 +72,7 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h2 class="major">O zi la spa pentru pereții tăi</h2>
-									<p>Noi suntem <strong>Trafalescu</strong>, o echipă experimentată de zugravi in București, complet dotată, care pune la dispoziția ta soluțiile necesare unei schimbări, astfel încât tu să-ți dedici timpul lucrurilor cu adevărat importante.</p>
+									<p>Noi suntem <strong>Trafalescu</strong>, o echipă experimentată de zugravi în București, complet dotată, care pune la dispoziția ta soluțiile necesare unei schimbări, astfel încât tu să-ți dedici timpul lucrurilor cu adevărat importante.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
