--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
-										<form method="post" action="mailto:contact@trafalescu.ro">
+										<form method="post" action="mailto:contact@trafalescu.ro" target="_top">
 											<div class="fields">
 												<div class="field half">
 													<label for="name">Nume</label>
