--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="ro">
 	<head>
 		<title>Trafalescu - Zugrav în București</title>
 		<meta name="description" content="Echipă profesionistă de zugravi în București. Realizăm lucrări lavabile eficient și rapid. Îți împrospătăm apartamentul cu lavabil alb într-o singură zi.">
 		<meta name="theme-color" content="#7c5295">
 		<title>Trafalescu</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/customPersonalCss.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -63,7 +63,7 @@
 		<div id="content">
 			<!-- Logo Navigation-->
 			<div class="row">
-				<div class="divNavContent"><img src="images/logo.png" class="logoNav"/></div>
+				<div class="divNavContent"><img src="images/logo.png" class="logoNav"/>Logo Trafalescu</div>
 			</div>
 			<div id="page-wrapper">
 				<!-- Wrapper -->
@@ -78,7 +78,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/brush.jpg" alt=""/>
+									<img src="images/brush.jpg" alt="Pensule diverse culori"/>
 								</div>
 							</section>
 
@@ -97,7 +97,7 @@
 									<p>*Pentru lucrările lavabile color ne vedem și a doua zi.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/zugrav.jpg" alt="" />
+									<img src="images/zugrav.jpg" alt="Zugrav vopseste peretele alb in Bucuresti" />
 								</div>
 							</section>
 
@@ -112,18 +112,18 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/fulls/sufragerie-canapea-zen.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/sufragerie-canapea-zen.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/sufragerie-plante-caramida.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/sufragerie-plante-caramida.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/dormitor-mov-lavabil.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/dormitor-mov-lavabil.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/sufragerie-canapea-zen.jpg" class="image filtered span-3" data-position="bottom">Sufragerie<img src="images/gallery/thumbs/sufragerie-canapea-zen.jpg" alt="Sufragerie turcoaz Buddha" />Sufragerie</a>
+										<a href="images/gallery/fulls/sufragerie-plante-caramida.jpg" class="image filtered span-1-5" data-position="center">Living<img src="images/gallery/thumbs/sufragerie-plante-caramida.jpg" alt="Living caramida ghiveci" />Living</a>
+										<a href="images/gallery/fulls/dormitor-mov-lavabil.jpg" class="image filtered span-1-5" data-position="bottom">Dormitor<img src="images/gallery/thumbs/dormitor-mov-lavabil.jpg" alt="Pat mov lavabil alb" />Dormitor</a>
 									</div>
-									<a href="images/gallery/fulls/fotoliu-galben.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/fotoliu-galben.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/fotoliu-galben.jpg" class="image filtered span-2-5" data-position="top">Fotoliu<img src="images/gallery/thumbs/fotoliu-galben.jpg" alt="Fotoliu galben lampa citit" />Fotoliu</a>
 									<div class="group span-4-5">
-										<a href="images/gallery/fulls/masa-bucatarie-lavabil.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/masa-bucatarie-lavabil.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/living-lavabil-alb.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/living-lavabil-alb.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/dormitor-lavabil-alb.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/dormitor-lavabil-alb.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/baie-lavabil-alb.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/baie-lavabil-alb.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/masa-bucatarie-lavabil.jpg" class="image filtered span-3" data-position="top">Masa cina<img src="images/gallery/thumbs/masa-bucatarie-lavabil.jpg" alt="Masa bucatarie scaune parchet" />Masa cina</a>
+										<a href="images/gallery/fulls/living-lavabil-alb.jpg" class="image filtered span-1-5" data-position="center">Semineu<img src="images/gallery/thumbs/living-lavabil-alb.jpg" alt="Living semineu lavabil alb" />Semineu</a>
+										<a href="images/gallery/fulls/dormitor-lavabil-alb.jpg" class="image filtered span-1-5" data-position="bottom">Pat<img src="images/gallery/thumbs/dormitor-lavabil-alb.jpg" alt="Dormitor caramida alba noptiera" />Pat</a>
+										<a href="images/gallery/fulls/baie-lavabil-alb.jpg" class="image filtered span-3" data-position="top">Baie<img src="images/gallery/thumbs/baie-lavabil-alb.jpg" alt="Baie gresie oglinda zugravit alb" />Baie</a>
 									</div>
-									<a href="images/gallery/fulls/canapea-caramida-lavabil-alb.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/canapea-caramida-lavabil-alb.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/canapea-caramida-lavabil-alb.jpg" class="image filtered span-2-5" data-position="right">Canapea<img src="images/gallery/thumbs/canapea-caramida-lavabil-alb.jpg" alt="Canapea verde cu planta si caramida alba" />Canapea</a>
 								</div>
 							</section>
 
@@ -184,7 +184,7 @@
 										și vopsitul în casa ta nu au fost niciodată mai ușoare.</p>
 								</div>
 								<div class="image filtered tinted" data-position="center">
-									<img src="images/dormitor-camera.jpg" alt="" />
+									<img src="images/dormitor-camera.jpg" alt="Dormitor cu dressing si lustra albastra" />
 								</div>
 							</section>
 
@@ -218,15 +218,15 @@
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon brands fa-facebook-f"><a target="_blank" href="https://www.facebook.com/Trafalescu-115558663534611">facebook.com/trafalescu</a></li>
-								            <li class="icon brands fa-instagram"><a target="_blank" href="https://www.instagram.com/trafalescu/">@trafalescu</a></li>
+											<li class="icon brands fa-facebook-f"><a target="_blank" href="https://www.facebook.com/Trafalescu-115558663534611" rel="noreferrer">facebook.com/trafalescu</a></li>
+								            <li class="icon brands fa-instagram"><a target="_blank" href="https://www.instagram.com/trafalescu/" rel="noreferrer">@trafalescu</a></li>
 								        </ul>
 									</div>
 								</div>
 							</section>
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; Trafalescu: <a href="https://html5up.net" rel="noreferrer" target="_blank">HTML5 UP</a>.</div>
 
 					</div>
 
