--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div id="content">
 			<!-- Logo Navigation-->
 			<div class="row">
-				<div class="divNavContent"><img src="images/logo.png" class="logoNav" alt="Logo Trafalescu"/>Logo Trafalescu</div>
+				<div class="divNavContent"><img src="images/logo.png" class="logoNav" alt="Logo Trafalescu"/></div>
 			</div>
 			<div id="page-wrapper">
 				<!-- Wrapper -->
