--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/brush.jpg" alt="Pensule diverse culori"/>
+									<img src="images/brush.webp" alt="Pensule diverse culori"/>
 								</div>
 							</section>
 
