--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 -->
 <html lang="ro">
 	<head>
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173144006-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-173144006-2');
+</script>
+
 		<title>Trafalescu - Zugrav în București</title>
 		<meta name="description" content="Echipă profesionistă de zugravi în București. Realizăm lucrări lavabile eficient și rapid. Îți împrospătăm apartamentul cu lavabil alb într-o singură zi.">
 		<meta name="theme-color" content="#7c5295">
