--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="ro">
 	<head>
-		
+
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173144006-2"></script>
 <script>
@@ -17,7 +17,7 @@
   gtag('config', 'UA-173144006-2');
 </script>
 
-		<title>Trafalescu - Zugrav în București</title>
+		<title>Zugrav București | Trafalescu</title>
 		<meta name="description" content="Echipă profesionistă de zugravi în București. Realizăm lucrări lavabile eficient și rapid. Îți împrospătăm apartamentul cu lavabil alb într-o singură zi.">
 		<meta name="theme-color" content="#7c5295">
 		<title>Trafalescu</title>
