--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   "image": "https://drive.google.com/file/d/1BFzXQVqxZ4klT3-kJUt7Lix-0FrAfcp1/view",
   "@id": "https://www.trafalescu.ro",
   "url": "https://www.trafalescu.ro",
-  "telephone": "0790559895",
+  "telephone": "0727386166",
   "priceRange": "1800 - 4800",
   "address": {
     "@type": "PostalAddress",
@@ -118,7 +118,7 @@
 									<h2 class="major">Jurnal foto</h2>
 									<p>Suntem o echipă pasionată, inovativă și experimentată, care consideră esențial ca tu să fii satisfăcut, când ne luăm la revedere.</p>
 									<ul class="actions">
-										<li><a href="tel:0790 559 895" class="button">Sună-ne!</a></li>
+										<li><a href="tel:0727386166" class="button">Sună-ne!</a></li>
 									</ul>
 								</div>
 								<div class="gallery">
@@ -203,7 +203,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p><strong>Trafalescu</strong><br> București, Romania<br> Luni - Vineri: 09:00 - 20:00<br>mail: contact@trafalescu.ro<br><a href="tel:0790 559 895">Tel: 0790 559 895</a></p>
+									<p><strong>Trafalescu</strong><br> București, Romania<br> Luni - Vineri: 09:00 - 20:00<br>mail: contact@trafalescu.ro<br><a href="tel:0727 386 166">Tel: 0727 386 166</a></p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
