--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   gtag('config', 'UA-173144006-2');
 </script>
 
-		<title>Zugrav București | Trafalescu</title>
+		<title>Trafalescu - Zugravi în București </title>
 		<meta name="description" content="Echipă profesionistă de zugravi în București. Realizăm lucrări lavabile eficient și rapid. Îți împrospătăm apartamentul cu lavabil alb într-o singură zi.">
 		<meta name="theme-color" content="#7c5295">
 		<title>Trafalescu</title>
